[dfa-assist] Option in settings to turn off gray-out instead of registry key (IDEA-296575)
GitOrigin-RevId: a19fd7be9aadbfc2b5fa95d2d7363efac9e6a1db